# Generated by Django 5.2.14 on 2026-05-19 17:45

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('habits', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='HabitCompletion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('completion_date', models.DateField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'ordering': ('-completion_date', '-id'),
            },
        ),
        migrations.AddConstraint(
            model_name='habitscheduleday',
            constraint=models.CheckConstraint(condition=models.Q(('weekday__gte', 0), ('weekday__lte', 6)), name='weekday_between_0_and_6'),
        ),
        migrations.AddField(
            model_name='habitcompletion',
            name='habit',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='completions', to='habits.habit'),
        ),
        migrations.AddConstraint(
            model_name='habitcompletion',
            constraint=models.UniqueConstraint(fields=('habit', 'completion_date'), name='unique_completion_per_habit_date'),
        ),
    ]
